--- a/login/Assistant/Assistant/wwwroot/SavedOfflineList.html
+++ b/login/Assistant/Assistant/wwwroot/SavedOfflineList.html
@@ -2,11 +2,11 @@
     <title>Zapisana lista</title>
 </head>
 <body>
-    <h4>Last Saved List</h4>
-
+    <h4>Tryb Offline</h4>
+    <h4>Brak internetu</h4>
 
     <div id="app">
-        <h2>List vue:</h2>
+        <h2>Lista zakupów</h2>
         <ol>
             <li v-for="item in items">
                 <label>
@@ -69,7 +69,6 @@
                 item.Done = !item.Done
             },
             getItems: async function () {
-                //fetch(data).then(Response => Response.json()).then(data => this.items = data).catch(err => console.log(err));
                 this.items = await fetchItems();
                 this.items = objArray;
             }
