--- a/login/Assistant/Assistant/wwwroot/SavedOfflineList.html
+++ b/login/Assistant/Assistant/wwwroot/SavedOfflineList.html
@@ -2,27 +2,35 @@
     <title>Zapisana lista</title>
 </head>
 <body>
-    <h4>Tryb Offline</h4>
-    <h4>Brak internetu</h4>
+    <h1>Tryb Offline</h1>
+    <h1>Brak internetu</h1>
+    <h1>Lista zakupów</h1>
+    <div id="app" style="font-size:32px; font-family:'Times New Roman'">
 
-    <div id="app">
-        <h2>Lista zakupów</h2>
+
         <ol>
+
             <li v-for="item in items">
+
+
                 <label>
+
                     <input type="checkbox"
                            v-on:change="toggle(item)"
                            v-bind:checked="item.Done">
-
-                    <del v-if="item.Done">
-                        {{ item.Name}}
-                    </del>
-                    <span v-else>
-                        {{ item.Name }}
+                    <span class="checkboxtext">
+                        <del v-if="item.Done">
+                            {{ item.Name}}
+                        </del>
+                        <span v-else>
+                            {{ item.Name }}
+                        </span>
                     </span>
                 </label>
+
             </li>
         </ol>
+
     </div>
 </body>
 
@@ -90,6 +98,18 @@
 
     del {
         color: rgba(0, 0, 0, 0.3);
+    }
+    input[type=checkbox]{
+        -ms-transform:scale(2);
+        -moz-transform:scale(2);
+        -webkit-transform:scale(2);
+        -o-transform:scale(2);
+        transform:scale(2);
+        padding: 10px;
+    }
+    .checkboxtext{
+        font-size:110%;
+        display:inline;
     }
 </style>
 
